feat: Add local integration verification test with actual MCP Toolbox server